# length

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.rst  CONTRIBUTING.md  README.md  io.github.herve4m.Length.Devel.yaml  meson.build  meson.options
.github/files/: exceptions.json
.github/workflows/: build-lint.yml  pre-commit.yml
.well-known/: org.flathub.VerifiedApps.txt
build-aux/: README-RELEASE.md  build-run.sh
build-aux/flatpak/: io.github.herve4m.Length.yaml
data/: io.github.herve4m.Length.desktop.in.in  io.github.herve4m.Length.gschema.xml.in  io.github.herve4m.Length.metainfo.xml.in.in  io.github.herve4m.Length.service.in  length.gresource.xml  meson.build
data/icons/: meson.build
data/media/css/: style.css
data/media/screenshots/: orientation.webm
data/ui/: help-overlay.ui  offset.ui  opacity.ui  orientation.ui  pointer_tracking.ui  preferences.ui  preferences_display.ui  scale.ui  window.ui
help/: LINGUAS  README-BUILD.md  help.pot  meson.build
help/C/: adjusting.page  calibrating.page  colors.page  direction.page  fonts.page  index.page  layers.page  legal.xml  offset.page  resizing.page  rotating.page  scale.page  tracking.page  transparency.page  units.page
help/es/: es.po
help/fr/: fr.po
help/it/: it.po
help/nl/: nl.po
help/ru/: ru.po
help/uk/: uk.po
po/: LINGUAS  POTFILES.in  README-BUILD.md  es.po  fr.po  it.po  length.pot  meson.build  nl.po  ru.po  uk.po
src/: calibration_settings.py  draw_context.py  length.in  main.py  meson.build  monitor_mngt.py  offset.py  opacity.py  orientation.py  pointer_tracking.py  preferences.py  preferences_display.py  scale.py  settings.py  unit.py  unit_cm.py  unit_inch.py  unit_mng.py  unit_pct.py  unit_pica.py  unit_point.py  unit_px.py  unit_rel_pct.py  window.py
