help_files = [
  'adjusting.page',
  'calibrating.page',
  'colors.page',
  'direction.page',
  'fonts.page',
  'index.page',
  'offset.page',
  'orientation.page',
  'resizing.page',
  'tracking.page',
  'transparency.page',
  'units.page',
  'legal.xml',
]

help_media = [
  'figures/always-on-top.png',
  'figures/calibrating.png',
  'figures/colors.png',
  'figures/direction.png',
  'figures/fonts.png',
  'figures/direction-ltr-symbolic.svg',
  'figures/direction-rtl-symbolic.svg',
  'figures/io.github.herve4m.Length.svg',
  'figures/offset.png',
  'figures/open-menu-symbolic.svg',
  'figures/size.png',
  'figures/tracking.png',
  'figures/transparency.png',
  'figures/units.png',
]

gnome.yelp(meson.project_name(),
        sources: help_files,
          media: help_media,
  symlink_media: true,
)
