scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(scalable_dir / 'io.github.herve4m.Length.svg',
  install_dir: get_option('datadir') / 'icons' / scalable_dir,
       rename: '@0@.svg'.format(application_id)
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(symbolic_dir / 'ruler-outline-horizontal-symbolic.svg',
	install_dir: get_option('datadir') / 'icons' / symbolic_dir,
	     rename: '@0@-symbolic.svg'.format(application_id)
)
